--- a/AND_Gate visualization using Perceptron.ipynb
+++ b/AND_Gate visualization using Perceptron.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45ec2921",
+   "metadata": {},
+   "source": [
+    "Plot activation functions (Sigmoid, Tanh, ReLU)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "bf57d9b7-a5f3-457d-88aa-7a3e2d8dfe8c",
@@ -69,27 +77,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "191dccbe-2723-41b5-8ed1-fae75695914d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## Training Loop"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "acee06d2",
+   "execution_count": null,
+   "id": "52b7ffc7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "\n",
     "class Perceptron:\n",
     "    def __init__(self, input_dim, lr=0.1):\n",
     "        self.W = np.random.randn(input_dim, 1) * 0.01\n",
@@ -129,8 +124,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "191dccbe-2723-41b5-8ed1-fae75695914d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Training Loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bee553a2",
+   "metadata": {},
+   "source": [
+    "And gate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +179,6 @@
     "data = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
     "target = np.array([[0],[0],[0],[1]])\n",
     "\n",
-    "\n",
     "model = Perceptron(input_dim=2, lr=0.5)\n",
     "train_perceptron(model, data, target, epochs=200)\n",
     "\n",
@@ -186,6 +198,14 @@
     "plt.ylabel(\"Input 2\")\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ab9c112",
+   "metadata": {},
+   "source": [
+    "or gate"
    ]
   },
   {
@@ -247,6 +267,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5479eb97",
+   "metadata": {},
+   "source": [
+    "xor failure\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "80ba823c",
@@ -302,6 +330,14 @@
     "plt.ylabel(\"Input 2\")\n",
     "plt.grid(True)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80490e5f",
+   "metadata": {},
+   "source": [
+    "XOR with Multi-Layered Perceptron"
    ]
   },
   {
@@ -416,14 +452,6 @@
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "197fac27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
