--- a/Mnist_Classifier.ipynb
+++ b/Mnist_Classifier.ipynb
@@ -200,21 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "ade0e89b-45eb-405e-9482-f6950d4bf295",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = Sequential([\n",
-    "#     Dense(units=512, activation='relu', input_shape=(28*28)),\n",
-    "#     Dense(units=512, activation='relu'),\n",
-    "#     Dense(units=10, activation='softmax')\n",
-    "# ])\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(units=512, activation='relu', input_shape=(28*28,)))\n",
-    "model.add(Dense(units=512, activation='relu'))\n",
-    "model.add(Dense(units=10, activation='softmax'))"
+    "model = Sequential([\n",
+    "    Dense(units=512, activation='relu', input_shape=(28*28)),\n",
+    "    Dense(units=512, activation='relu'),\n",
+    "    Dense(units=10, activation='softmax')\n",
+    "])\n",
+    "\n"
    ]
   },
   {
