--- a/toyset_dataset.ipynb
+++ b/toyset_dataset.ipynb
@@ -9,19 +9,22 @@
    "source": [
     "# X = np.array([0.5, 0.2])   # Inputs\n",
     "# y_true = 1                 # Target\n",
+    "\n",
+    "\n",
     "# weights = np.array([0.4, -0.3])\n",
     "# bias = 0.1\n",
     "# lr = 0.1  # Learning rate\n",
+    "\n",
     "# # Weighted sum\n",
     "# z = np.dot(X, weights) + bias\n",
     "\n",
     "# # Activation output\n",
     "# a = sigmoid(z)\n",
     "\n",
-    "# print(\"Weighted sum z:\", z)\n",
-    "# print(\"Activation a:\", a)\n",
+    "\n",
     "# loss = 0.5 * (y_true - a)**2\n",
-    "# print(\"Loss:\", loss)\n",
+    "\n",
+    "\n",
     "# # Gradients\n",
     "# dL_da = a - y_true\n",
     "# da_dz = a * (1 - a)\n",
@@ -30,15 +33,11 @@
     "# grad_w = dL_da * da_dz * dz_dw\n",
     "# grad_b = dL_da * da_dz\n",
     "\n",
-    "# print(\"Gradient w.r.t weights:\", grad_w)\n",
-    "# print(\"Gradient w.r.t bias:\", grad_b)\n",
-    "# weights -= lr * grad_w\n",
-    "# bias -= lr * grad_b\n",
     "\n",
-    "# print(\"Updated weights:\", weights)\n",
-    "# print(\"Updated bias:\", bias)\n",
+    "# weights =weights - lr * grad_w\n",
+    "# bias =bias - lr * grad_b\n",
     "\n",
-    "# make this to train on the dataset"
+    "\n"
    ]
   },
   {
